--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-352.2KB/s(Youtube:不良林), server: 116.129.254.177, port: 65075, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇨🇳 中国-3.11MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34004, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.31MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-156.2KB/s(Youtube:不良林), server: 111.45.22.136, port: 65001, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
-  - {name: 🇺🇸 美国-1.80MB/s(Youtube:不良林), server: 104.224.141.225, port: 700, type: ss, cipher: chacha20-ietf-poly1305, password: bSdsFZtHhbAl}
-  - {name: 🇸🇬 新加坡-941.8KB/s(Youtube:不良林), server: 165.232.169.142, port: 29332, type: ss, cipher: aes-256-cfb, password: 1e5111699c45496da84112f35db665c4}
-  - {name: 🇸🇬 新加坡-1.05MB/s(Youtube:不良林), server: sg-03.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-03.licom.ml, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-1.41MB/s(Youtube:不良林), server: sg-02.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-02.licom.ml, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-619.4KB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
+  - {name: 🇨🇳 中国-306.9KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32003, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-178.1KB/s(Youtube:不良林), server: 116.129.254.177, port: 65048, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇭🇰 (已存活5天)香港-3.77MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
   - {name: 🇺🇸 美国-1.19MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇨🇦 加拿大-829.6KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇸🇬 新加坡-489.4KB/s(Youtube:不良林), server: 103.172.116.7, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
+  - {name: 🇨🇳 中国-1.08MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-1.38MB/s(Youtube:不良林), server: trojan3.udpgw.com, port: 443, type: trojan, password: 8db1b560-019d-11ed-8bdf-1239d0255272, sni: trojan3.udpgw.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.83MB/s(Youtube:不良林), server: jp.azzhuangaping.tw, port: 80, type: vmess, uuid: cebeb605-6e5e-3a13-a0ce-1ee247f91bf7, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /adobe, ws-headers: {Host: jp.azzhuangaping.tw}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-352.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-156.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-941.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.05MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.41MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-619.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-306.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-178.1KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活5天)香港-3.77MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-829.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-489.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.08MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.83MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-352.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-156.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-941.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.05MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.41MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-619.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-306.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-178.1KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活5天)香港-3.77MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-829.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-489.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.08MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.83MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-352.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-156.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-941.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.05MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.41MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-619.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-306.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-178.1KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活5天)香港-3.77MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-829.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-489.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.08MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.83MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 (已存活5天)香港-3.77MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-352.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-156.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-941.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.05MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.41MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-619.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-306.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-178.1KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活5天)香港-3.77MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-829.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-489.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.08MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.83MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-352.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-156.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-941.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.05MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.41MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-619.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-306.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-178.1KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活5天)香港-3.77MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-829.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-489.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.08MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.83MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-352.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-156.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-941.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.05MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.41MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-619.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-306.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-178.1KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活5天)香港-3.77MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-829.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-489.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.08MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.83MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-352.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.11MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-156.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.80MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-941.8KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.05MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.41MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-619.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-306.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-178.1KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活5天)香港-3.77MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-829.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-489.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.08MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.83MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
