--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-4.05MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 30080, type: trojan, password: 2778263c-486d-4af8-9ba4-25fc536b5bac, sni: gzyd1.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.16MB/s(Youtube:不良林), server: hnyd.52147.top, port: 30130, type: trojan, password: 2778263c-486d-4af8-9ba4-25fc536b5bac, sni: hnyd.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.57MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32003, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-339.2KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65031, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
-  - {name: 🇺🇸 美国-3.61MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.39MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-156.2KB/s(Youtube:不良林), server: 111.45.22.136, port: 65001, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
-  - {name: 未知国家-1.83MB/s(Youtube:不良林), server: jp.azzhuangaping.tw, port: 80, type: vmess, uuid: cebeb605-6e5e-3a13-a0ce-1ee247f91bf7, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /adobe, ws-headers: {Host: jp.azzhuangaping.tw}}
-  - {name: 🇺🇸 美国-1.19MB/s(Youtube:不良林), server: lu1.gogogoo.cyou, port: 443, type: vmess, uuid: db5d1aa3908b44d1be0a4e6a8d4e4cda, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /go, ws-headers: {Host: lu1.gogogoo.cyou}}
-  - {name: 🇺🇸 美国-1.45MB/s(Youtube:不良林), server: lu1.gogogoo.cyou, port: 443, type: vmess, uuid: db5d1aa3-908b-44d1-be0a-4e6a8d4e4cda, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /go, ws-headers: {Host: lu1.gogogoo.cyou}}
-  - {name: 🇺🇸 美国-1.58MB/s(Youtube:不良林), server: vus2.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vus2.0bad.com}}
-  - {name: 未知国家-2.39MB/s(Youtube:不良林), server: v116.v2dns.bar, port: 80, type: vmess, uuid: c97cf46e-1554-36cb-8b36-c3556b883dc4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v116-DtoEwAEX, ws-headers: {Host: v116.v2dns.bar}}
+  - {name: 🇨🇳 中国-229.6KB/s(Youtube:不良林), server: 120.233.150.146, port: 65097, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
+  - {name: 🇨🇳 中国-420.6KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65096, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-553.8KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65076, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-324.3KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65078, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-4.53MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.60MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-3.18MB/s(Youtube:不良林), server: 47.243.227.118, port: 46108, type: vmess, uuid: 51f7927b-e4ae-44cc-acc8-605f2b662e2a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.227.118]}}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-4.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.57MB/s(Youtube:不良林)
       - 🇨🇳 中国-339.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-156.2KB/s(Youtube:不良林)
-      - 未知国家-1.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
-      - 未知国家-2.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-229.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-420.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-553.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-324.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.60MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.18MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-4.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.57MB/s(Youtube:不良林)
       - 🇨🇳 中国-339.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-156.2KB/s(Youtube:不良林)
-      - 未知国家-1.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
-      - 未知国家-2.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-229.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-420.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-553.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-324.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.60MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.18MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-4.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.57MB/s(Youtube:不良林)
       - 🇨🇳 中国-339.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-156.2KB/s(Youtube:不良林)
-      - 未知国家-1.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
-      - 未知国家-2.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-229.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-420.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-553.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-324.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.60MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.18MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-3.18MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-4.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.57MB/s(Youtube:不良林)
       - 🇨🇳 中国-339.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-156.2KB/s(Youtube:不良林)
-      - 未知国家-1.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
-      - 未知国家-2.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-229.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-420.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-553.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-324.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.60MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.18MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-4.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.57MB/s(Youtube:不良林)
       - 🇨🇳 中国-339.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-156.2KB/s(Youtube:不良林)
-      - 未知国家-1.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
-      - 未知国家-2.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-229.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-420.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-553.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-324.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.60MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.18MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-4.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.57MB/s(Youtube:不良林)
       - 🇨🇳 中国-339.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-156.2KB/s(Youtube:不良林)
-      - 未知国家-1.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
-      - 未知国家-2.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-229.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-420.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-553.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-324.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.60MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.18MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-4.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.57MB/s(Youtube:不良林)
       - 🇨🇳 中国-339.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.61MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-156.2KB/s(Youtube:不良林)
-      - 未知国家-1.83MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.19MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.58MB/s(Youtube:不良林)
-      - 未知国家-2.39MB/s(Youtube:不良林)
+      - 🇨🇳 中国-229.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-420.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-553.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-324.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.60MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.18MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
